[gd_scene load_steps=13 format=3 uid="uid://e2vhj8gjm240"]

[ext_resource type="Script" path="res://Scripts/life_cat.gd" id="1_ur5ob"]
[ext_resource type="Texture2D" uid="uid://cg8jna1y730qc" path="res://Art/player_cat.png" id="2_j3d6h"]
[ext_resource type="Texture2D" uid="uid://khj45rgk1tsp" path="res://Art/under.png" id="3_6rumc"]
[ext_resource type="Texture2D" uid="uid://c73peghcsdadi" path="res://Art/fill.png" id="4_qsu2p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_228d0"]
radius = 18.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gm5t3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1osmb"]
radius = 16.0

[sub_resource type="Theme" id="Theme_g2d4v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qtdw"]
size = Vector2(32, 96)

[sub_resource type="Gradient" id="Gradient_q0a1l"]
offsets = PackedFloat32Array(0.168831, 0.649351)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ij8ey"]
gradient = SubResource("Gradient_q0a1l")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_noyci"]
radius = 32.0

[node name="Catronaute" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ur5ob")

[node name="Area_damageable" type="Area2D" parent="." groups=["damageable"]]

[node name="Collision_damageable" type="CollisionShape2D" parent="Area_damageable" groups=["damageable"]]
position = Vector2(32, -30)
shape = SubResource("CapsuleShape2D_228d0")

[node name="Timer" type="Timer" parent="."]

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
position = Vector2(32, -32)
shape = SubResource("CapsuleShape2D_gm5t3")

[node name="Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("2_j3d6h")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="."]
centered = false

[node name="Collision_0" type="CollisionShape2D" parent="."]
position = Vector2(32, -16)
shape = SubResource("CircleShape2D_1osmb")

[node name="DebugLabel" type="Label" parent="."]
offset_left = 12.0
offset_right = 52.0
offset_bottom = 23.0

[node name="HP_bar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -32.0
offset_top = -63.0
offset_right = -22.0
offset_bottom = -1.0
theme = SubResource("Theme_g2d4v")
step = 1.0
value = 10.0
fill_mode = 3
show_percentage = false

[node name="Energy_bar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -16.0
offset_top = -64.0
offset_right = -5.0
offset_bottom = -1.0
step = 1.0
value = 50.0
fill_mode = 3
show_percentage = false

[node name="BareHand_attack" type="Area2D" parent="."]
position = Vector2(32, -32)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BareHand_attack"]
position = Vector2(48, 0)
shape = SubResource("RectangleShape2D_5qtdw")

[node name="sprite" type="ColorRect" parent="BareHand_attack/CollisionShape2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -48.0
offset_right = 16.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="sprite2" type="ColorRect" parent="BareHand_attack/CollisionShape2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -48.0
offset_right = 16.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0, 0.894118, 0.898039, 1)

[node name="ActionTimer" type="Timer" parent="BareHand_attack"]
wait_time = 0.2
one_shot = true

[node name="RegenTimer" type="Timer" parent="."]

[node name="PointLight2D2" type="PointLight2D" parent="."]
position = Vector2(32, -32)
scale = Vector2(4, 4)
blend_mode = 2
range_layer_min = -4
range_layer_max = 4
texture = SubResource("GradientTexture2D_ij8ey")

[node name="Interaction_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_Area"]
position = Vector2(32, -16)
shape = SubResource("CircleShape2D_noyci")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = 13.0
offset_top = -96.0
offset_right = 29.0
offset_bottom = -80.0
scale = Vector2(2, 2)
value = 33.0
fill_mode = 4
texture_under = ExtResource("3_6rumc")
texture_progress = ExtResource("4_qsu2p")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="BareHand_attack" to="." method="_on_bare_hand_attack_area_entered"]
[connection signal="body_entered" from="BareHand_attack" to="." method="_on_bare_hand_attack_body_entered"]
[connection signal="body_exited" from="BareHand_attack" to="." method="_on_bare_hand_attack_body_exited"]
[connection signal="timeout" from="BareHand_attack/ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="body_entered" from="Interaction_Area" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="Interaction_Area" to="." method="_on_interaction_area_body_exited"]
